[package]
name = "wasm-image-tuning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.24.0"
wasm-bindgen = "0.2.73"
js-sys = "0.3.51"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"